Make the prices on the food items more pronounced
Edit order details structure

--- a/UI/admin/all-food-items.html
+++ b/UI/admin/all-food-items.html
@@ -89,7 +89,7 @@
               <div class="item-details">
                 <h5>#1230</h5>
                 <h3>Traditional French dessert</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="white-text green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
@@ -108,7 +108,7 @@
               <div class="item-details">
                 <h5>#1220</h5>
                 <h3>Sweet italian pastery</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="white-text green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
@@ -127,7 +127,7 @@
               <div class="item-details">
                 <h5>#1250</h5>
                 <h3>Decadent Sugary Fruit Puff</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="white-text green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
@@ -145,7 +145,7 @@
               <div class="item-details">
                 <h5>#1270</h5>
                 <h3>Freshly Baked Sausages</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="white-text green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
@@ -170,7 +170,7 @@
               <div class="item-details">
                 <h5>#1270</h5>
                 <h3>Coffee</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="white-text green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
@@ -189,7 +189,7 @@
               <div class="item-details">
                 <h5>#1330</h5>
                 <h3>Latte</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="white-text green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
@@ -208,7 +208,7 @@
               <div class="item-details">
                 <h5>#1340</h5>
                 <h3>Clean Clear Water</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="white-text green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
@@ -226,7 +226,7 @@
               <div class="item-details">
                 <h5>#1430</h5>
                 <h3>Cuba Libre cocktail</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
