--- a/UI/admin/pending-orders.html
+++ b/UI/admin/pending-orders.html
@@ -87,9 +87,9 @@
               <div class="item-details">
                 <p>#1120 12-08-2018 12:09:00</p>
                 <h3>Shawarma and Sauce</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
                 <p>Quantity: 4</p>
-                <p>Amount Paid: &#8358;6000</p>
+                <p>Amount Paid: <span class="price-figure">&#8358;6000</span></p>
                 <h5>Order by: Bruce Banner</h5>
               </div>
               <button class="green-bg white-text">
@@ -109,9 +109,9 @@
               <div class="item-details">
                 <p>#1120 12-08-2018 12:09:00</p>
                 <h3>Ham Burger</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
                 <p>Quantity: 4</p>
-                <p>Amount Paid: &#8358;6000</p>
+                <p>Amount Paid: <span class="price-figure">&#8358;6000</span></p>
                 <h5>Order by: Chris Evans</h5>
               </div>
               <button class="green-bg white-text">
@@ -132,9 +132,9 @@
               <div class="item-details">
                 <p>#1120 12-08-2018 12:09:00</p>
                 <h3>Decadent Sugary Fruit Puff</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
                 <p>Quantity: 4</p>
-                <p>Amount Paid: &#8358;6000</p>
+                <p>Amount Paid: <span class="price-figure">&#8358;6000</span></p>
                 <h5>Order by: Robert Downey</h5>
               </div>
               <button class="green-bg white-text">
@@ -154,9 +154,9 @@
               <div class="item-details">
                 <p>#1120 12-08-2018 12:09:00</p>
                 <h3>Freshly Baked Sausages</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
                 <p>Quantity: 4</p>
-                <p>Amount Paid: &#8358;6000</p>
+                <p>Amount Paid: <span class="price-figure">&#8358;6000</span></p>
                 <h5>Order by: Dr Strange</h5>
               </div>
               <button class="green-bg white-text">
