--- a/UI/all-food-items.html
+++ b/UI/all-food-items.html
@@ -41,7 +41,7 @@
 
               <div class="item-details">
                 <h3>Traditional French dessert</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
@@ -56,7 +56,7 @@
               </div>
               <div class="item-details">
                 <h3>Sweet italian pastery</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
@@ -72,7 +72,7 @@
               </div>
               <div class="item-details">
                 <h3>Decadent Sugary Fruit Puff</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
@@ -87,7 +87,7 @@
               </div>
               <div class="item-details">
                 <h3>Freshly Baked Sausages</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
@@ -109,7 +109,7 @@
 
               <div class="item-details">
                 <h3>Coffee</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
@@ -124,7 +124,7 @@
               </div>
               <div class="item-details">
                 <h3>Latte</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
@@ -140,7 +140,7 @@
               </div>
               <div class="item-details">
                 <h3>Clean Clear Water</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
@@ -155,7 +155,7 @@
               </div>
               <div class="item-details">
                 <h3>Cuba Libre cocktail</h3>
-                <p>Price: &#8358;1500</p>
+                <p>Price: <span class="price-figure">&#8358;1500</span></p>
               </div>
               <button class="blue-bg-colour">
                 <a href="login.html" class="white-text">Order now</a>
