--- a/UI/index.html
+++ b/UI/index.html
@@ -58,7 +58,7 @@
 
               <div class="item-details">
                 <h3>Vegan burger buckwheat</h3>
-                <p>Price: &#8358;1500</p>
+                <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
@@ -73,7 +73,7 @@
               </div>
               <div class="item-details">
                 <h3>Chicken Shawarma</h3>
-                <p>Price: &#8358;1500</p>
+                <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
@@ -89,7 +89,7 @@
               </div>
               <div class="item-details">
                 <h3>Ham Sandwiches</h3>
-                <p>Price: &#8358;1500</p>
+                <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
@@ -104,7 +104,7 @@
               </div>
               <div class="item-details">
                 <h3>Ata-Rodo Pizza</h3>
-                <p>Price: &#8358;1500</p>
+                <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
