--- a/UI/users/all-food-items.html
+++ b/UI/users/all-food-items.html
@@ -57,7 +57,7 @@
 
               <div class="item-details">
                 <h3>Traditional French dessert</h3>
-                <p>Price: &#8358;1500</p>
+                <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="confirm-order.html" class="white-text">Order now</a>
@@ -72,7 +72,7 @@
               </div>
               <div class="item-details">
                 <h3>Sweet italian pastery</h3>
-                <p>Price: &#8358;1500</p>
+                <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="confirm-order.html" class="white-text">Order now</a>
@@ -88,7 +88,7 @@
               </div>
               <div class="item-details">
                 <h3>Decadent Sugary Fruit Puff</h3>
-                <p>Price: &#8358;1500</p>
+                <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="confirm-order.html" class="white-text">Order now</a>
@@ -103,7 +103,7 @@
               </div>
               <div class="item-details">
                 <h3>Freshly Baked Sausages</h3>
-                <p>Price: &#8358;1500</p>
+                <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="confirm-order.html" class="white-text">Order now</a>
@@ -125,7 +125,7 @@
 
               <div class="item-details">
                 <h3>Coffee</h3>
-                <p>Price: &#8358;1500</p>
+                <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="confirm-order.html" class="white-text">Order now</a>
@@ -140,7 +140,7 @@
               </div>
               <div class="item-details">
                 <h3>Latte</h3>
-                <p>Price: &#8358;1500</p>
+                <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="confirm-order.html" class="white-text">Order now</a>
@@ -156,7 +156,7 @@
               </div>
               <div class="item-details">
                 <h3>Clean Clear Water</h3>
-                <p>Price: &#8358;1500</p>
+                <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour white-text">
                 <a href="confirm-order.html" class="white-text">Order now</a>
@@ -171,7 +171,7 @@
               </div>
               <div class="item-details">
                 <h3>Cuba Libre cocktail</h3>
-                <p>Price: &#8358;1500</p>
+                <p><span class="price-figure">&#8358;1,500</span></p>
               </div>
               <button class="blue-bg-colour">
                 <a href="confirm-order.html" class="white-text">Order now</a>
