--- a/UI/users/confirm-order.html
+++ b/UI/users/confirm-order.html
@@ -51,7 +51,7 @@
         </div>
         <div class="order-details">
           <h1>Traditional French dessert</h1>
-          <h3>Price: &#8358;1500</h3>
+          <h3><span class="price-figure">&#8358;1,500</span></h3>
           <h3>Quantity(packs):<input type="number" id="quantity" /></h3>
 
           <h3>Total: &#8358;1500</h3>
