--- a/UI/users/order-history.html
+++ b/UI/users/order-history.html
@@ -65,11 +65,13 @@
                 <p>23-08-2018 12:09:34PM</p>
                 <h3>Traditional French dessert</h3>
                 <p>
-                  <b>Price: </b> &#8358;1500</p>
+                  <span class="price-figure">&#8358;1500</span>
+                </p>
+                <b>Quantity: </b> 5
+                </p>
                 <p>
-                  <b>Quantity: </b> 5</p>
-                <p>
-                  <b>Amount Paid: </b> &#8358;7500</p>
+                  <b>Amount Paid: </b><span class="price-figure">&#8358;7500</span>
+                </p>
                 <p>
                   <b>Status: </b>
                   <span class="red-text"> Pending</span>
@@ -90,11 +92,14 @@
                 <p>23-08-2018 12:09:34PM</p>
                 <h3>Sweet italian pastery</h3>
                 <p>
-                  <b>Price: </b> &#8358;1500</p>
+                  <span class="price-figure">&#8358;1500</span>
+                </p>
                 <p>
-                  <b>Quantity: </b> 5</p>
+                  <b>Quantity: </b> 5
+                </p>
                 <p>
-                  <b>Amount Paid: </b> &#8358;7500</p>
+                  <b>Amount Paid: </b><span class="price-figure">&#8358;7500</span>
+                </p>
                 <p>
                   <b>Status: </b>
                   <span class="green-text"> Completed</span>
@@ -114,11 +119,14 @@
                 <p>23-08-2018 12:09:34PM</p>
                 <h3>Decadent Sugary Fruit Puff</h3>
                 <p>
-                  <b>Price: </b> &#8358;1500</p>
+                  <span class="price-figure">&#8358;1500</span>
+                </p>
                 <p>
-                  <b>Quantity: </b> 4</p>
+                  <b>Quantity: </b> 5
+                </p>
                 <p>
-                  <b>Amount Paid: </b> &#8358;6000</p>
+                  <b>Amount Paid: </b><span class="price-figure">&#8358;7500</span>
+                </p>
                 <p>
                   <b>Status: </b>
                   <span class="green-text"> Completed</span>
@@ -137,11 +145,14 @@
                 <p>20-08-2018 10:09:34PM</p>
                 <h3>Freshly Baked Sausages</h3>
                 <p>
-                  <b>Price: </b> &#8358;1500</p>
+                  <span class="price-figure">&#8358;1500</span>
+                </p>
                 <p>
-                  <b>Quantity: </b> 5</p>
+                  <b>Quantity: </b> 5
+                </p>
                 <p>
-                  <b>Amount Paid: </b> &#8358;7500</p>
+                  <b>Amount Paid: </b><span class="price-figure">&#8358;7500</span>
+                </p>
                 <p>
                   <b>Status: </b>
                   <span class="green-text"> Completed</span>
