--- a/UI/users/pending-orders.html
+++ b/UI/users/pending-orders.html
@@ -74,10 +74,17 @@
               <div class="img-container">
                 <img class="img-fluid" src="../assets/images/pastery-1.jpg" />
               </div>
-
               <div class="item-details">
+                <p>23-08-2018 12:09:34PM</p>
                 <h3>Traditional French dessert</h3>
-                <p>Price: &#8358;1500</p>
+                <p>
+                  <span class="price-figure">&#8358;1500</span>
+                </p>
+                <b>Quantity: </b> 5
+                </p>
+                <p>
+                  <b>Amount Paid: </b><span class="price-figure">&#8358;7500</span>
+                </p>
               </div>
               <button class="green-bg white-text">
                 <a href="edit-order.html" class="white-text">Edit</a>
@@ -94,8 +101,16 @@
                 <img class="img-fluid" src="../assets/images/pastery-2.jpg" />
               </div>
               <div class="item-details">
+                <p>23-08-2018 12:09:34PM</p>
                 <h3>Sweet italian pastery</h3>
-                <p>Price: &#8358;1500</p>
+                <p>
+                  <span class="price-figure">&#8358;1500</span>
+                </p>
+                <b>Quantity: </b> 5
+                </p>
+                <p>
+                  <b>Amount Paid: </b><span class="price-figure">&#8358;7500</span>
+                </p>
               </div>
               <button class="green-bg white-text">
                 <a href="edit-order.html" class="white-text">Edit</a>
@@ -113,8 +128,16 @@
                 <img class="img-fluid" src="../assets/images/pastery-3.jpg" />
               </div>
               <div class="item-details">
+                <p>23-08-2018 12:09:34PM</p>
                 <h3>Decadent Sugary Fruit Puff</h3>
-                <p>Price: &#8358;1500</p>
+                <p>
+                  <span class="price-figure">&#8358;1500</span>
+                </p>
+                <b>Quantity: </b> 5
+                </p>
+                <p>
+                  <b>Amount Paid: </b><span class="price-figure">&#8358;7500</span>
+                </p>
               </div>
               <button class="green-bg white-text">
                 <a href="edit-order.html" class="white-text">Edit</a>
@@ -131,8 +154,16 @@
                 <img class="img-fluid" src="../assets/images/pastery-4.jpg" />
               </div>
               <div class="item-details">
+                <p>23-08-2018 12:09:34PM</p>
                 <h3>Freshly Baked Sausages</h3>
-                <p>Price: &#8358;1500</p>
+                <p>
+                  <span class="price-figure">&#8358;1500</span>
+                </p>
+                <b>Quantity: </b> 5
+                </p>
+                <p>
+                  <b>Amount Paid: </b><span class="price-figure">&#8358;7500</span>
+                </p>
               </div>
               <button class="green-bg white-text">
                 <a href="edit-order.html" class="white-text">Edit</a>
