--- a/UI/admin/view-order.html
+++ b/UI/admin/view-order.html
@@ -83,9 +83,9 @@
         <div class="order-details">
           <p><b>#1120</b> - 12-08-2018 12:09:00</p>
           <h3>Shawarma and Sauce</h3>
-          <p>Price: &#8358;1500</p>
+          <p>Price: <span class="price-figure">&#8358;1500</span></p>
           <p>Quantity: 4</p>
-          <p>Amount Paid: &#8358;6000</p>
+          <p>Amount Paid: <span class="price-figure">&#8358;6000</span></p>
           <h5>Order by: Bruce Banner</h5>
           <button class="green-bg white-text">
             <a href="accept-order-successful.html" class="white-text">Accept</a>
