Make the footer stay in the viewport on brief/short pages
Rework items/objects that can make the footer go beyong the viewport

--- a/UI/login.html
+++ b/UI/login.html
@@ -15,7 +15,7 @@
   <header>
     <!-- Navigation bar Starts -->
     <nav class="navbar" id="myNav">
-      <a href="#" class="nav-brand">Fast-Food-Fast</a>
+      <a href="index.html" class="nav-brand">Fast-Food-Fast</a>
       <!--<a href="">About</a>-->
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
@@ -28,7 +28,7 @@
       <div class="box-container">
         <div class="innerbox-container">
           <div class="form">
-            <h2>Sign into your account</h2>
+            <h2>Login to your account</h2>
             <form onsubmit="redirectTo('./users/all-food-items.html'); return false;">
               <div>
                 <p class="">Email</p>
@@ -38,12 +38,12 @@
                 <p class="">Password</p>
                 <input type="password" class="textbox" required placeholder="Enter password here..." />
               </div>
-              <div class="">
+              <p>
                 <a href="forgotpassword.html" class="">forgot password?</a>
-              </div>
+              </p>
               <br/>
               <div class="">
-                <input type="submit" class="btn primary-colour white-text" value="Sign In" />
+                <input type="submit" class="btn blue-bg-colour white-text" value="Sign In" />
               </div>
               <br/>
               <div class="">
@@ -60,7 +60,7 @@
   </main>
   <!-- Main content Ends -->
   <footer>
-    <div class="primary-colour">
+    <div class="">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
