--- a/UI/users/pending-orders.html
+++ b/UI/users/pending-orders.html
@@ -37,7 +37,7 @@
   <header>
     <!-- Navigation bar Starts -->
     <nav class="navbar" id="myNav">
-      <a href="#home" class="nav-brand">Fast-Food-Fast</a>
+      <a href="all-food-items.html" class="nav-brand">Fast-Food-Fast</a>
       <a href="all-food-items.html">View Menu</a>
       <div class="dropdown">
         <button class="dropbtn">Orders
