Give the button to recover password a background colour

--- a/UI/admin/login.html
+++ b/UI/admin/login.html
@@ -39,7 +39,7 @@
                 <input type="password" class="textbox" required placeholder="Enter password here..." />
               </div>
               <p>
-                <a href="../users/forgotpassword.html" class="">forgot password?</a>
+                <a href="forgotpassword.html" class="">forgot password?</a>
               </p>
               <br/>
               <div class="">
