Make the quantity field not allow negative values

--- a/UI/users/edit-order.html
+++ b/UI/users/edit-order.html
@@ -54,7 +54,7 @@
             <div class="order-details">
               <h1>Traditional French dessert</h1>
               <h3><span class="price-figure">&#8358;1,500</span></h3>
-              <h3>Quantity(packs):</h3><input type="number" id="quantity" />
+              <h3>Quantity(packs):</h3><input type="number" min="0" id="quantity" />
 
               <h3>Total: &#8358;1500</h3>
               <button class="blue-bg-colour white-text">
