--- a/UI/users/confirm-order.html
+++ b/UI/users/confirm-order.html
@@ -52,7 +52,7 @@
         <div class="order-details">
           <h1>Traditional French dessert</h1>
           <h3><span class="price-figure">&#8358;1,500</span></h3>
-          <h3>Quantity(packs):<input type="number" id="quantity" /></h3>
+          <h3>Quantity(packs):<input type="number" min="0" id="quantity" /></h3>
 
           <h3>Total: &#8358;1500</h3>
           <button class="blue-bg-colour">
