--- a/UI/login.html
+++ b/UI/login.html
@@ -43,7 +43,7 @@
               </p>
               <br/>
               <div class="">
-                <input type="submit" class="btn blue-bg-colour white-text" value="Sign In" />
+                <input type="submit" class="btn blue-bg-colour white-text" value="Login" />
               </div>
               <br/>
               <div class="">
