Give the add food item button colour so it won't be out of place

--- a/UI/admin/add-food.html
+++ b/UI/admin/add-food.html
@@ -79,7 +79,7 @@
               </div>
               <br/>
               <div class="">
-                <input type="submit" class="btn" value="Add food" />
+                <input type="submit" class="btn blue-bg-colour white-text" value="Add food" />
               </div>
 
             </form>
