--- a/UI/admin/processed-orders.html
+++ b/UI/admin/processed-orders.html
@@ -6,12 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../assets/css/style.css" type="text/css" />
+  <link rel="stylesheet" href="../assets/css/modal.css" type="text/css" />
   <link rel="stylesheet" href="../assets/css/box.css" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Home ¦ Fast-Food-Fast</title>
 </head>
 
 <body>
+
+  <!-- Modal Starts -->
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <div class="text-center">
+        <h1 class="">Complete Order</h1>
+        <div class="">
+          <img src="../assets/images/check.png" alt="Cancel" />
+        </div>
+        <div class="">
+          <h1>Are you sure ?</h1>
+          <form onsubmit="redirectTo('order-complete.html'); return false;">
+            <input type="submit" class="btn green-bg white-text" value="Yes" />
+            <button type="button" onclick="modalClosePopup(); return false;" class="btn red-bg-colour white-text modal-close">No</button>
+          </form>
+          <br />
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal Ends -->
   <header>
     <!-- Navigation bar Starts -->
     <nav class="navbar" id="myNav">
@@ -81,8 +103,7 @@
               <td>4</td>
               <td class="text-wrap">in progress...</td>
               <td>
-                <input type="checkbox" id="statusCheck" onclick="redirectTo('order-complete.html'); return false;">
-                <a href="order-complete.html">Mark as Complete</a>
+                <a href="" onclick="modalPopup(); return false;">Mark as Complete</a>
               </td>
             </tr>
             <tr>
@@ -94,8 +115,7 @@
               <td>4</td>
               <td class="text-wrap">in progress...</td>
               <td>
-                <input type="checkbox" id="statusCheck" onclick="redirectTo('order-complete.html'); return false;">
-                <a href="order-complete.html">Mark as Complete</a>
+                <a href="" onclick="modalPopup(); return false;">Mark as Complete</a>
               </td>
             </tr>
           </table>
@@ -123,6 +143,7 @@
     </div>
   </footer>
   <script type="text/javascript" src="../assets/js/script.js"></script>
+  <script type="text/javascript" src="../assets/js/modal.js"></script>
 </body>
 
 </html>
