Create an event listener for navbar icon
Create event listener for the navbar icon to toggle the navbar when screen width is of either mobile or tablet

--- a/UI/admin/decline-confirmation.html
+++ b/UI/admin/decline-confirmation.html
@@ -44,7 +44,7 @@
           <a href="login.html">Logout</a>
         </div>
       </div>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+      <a id="nav-icon" class="icon">&#9776;</a>
     </nav>
     <!-- Navigation bar Ends -->
   </header>
@@ -65,7 +65,7 @@
               </div>
               <br />
               <div class="">
-                <input type="submit" class="btn" value="Submit" />
+                <input type="submit" class="btn blue-bg-colour white-text" value="Submit" />
               </div>
               <br/>
               <br />
