--- a/UI/signup.html
+++ b/UI/signup.html
@@ -16,7 +16,7 @@
     <!-- Navigation bar Starts -->
     <nav class="navbar" id="myNav">
       <a href="index.html" class="nav-brand">Fast-Food-Fast</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+      <a id="nav-icon" class="icon">&#9776;</a>
     </nav>
     <!-- Navigation bar Ends -->
   </header>
