--- a/UI/admin/edit-food-items.html
+++ b/UI/admin/edit-food-items.html
@@ -44,7 +44,7 @@
           <a href="login.html">Logout</a>
         </div>
       </div>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+      <a id="nav-icon" class="icon">&#9776;</a>
     </nav>
     <!-- Navigation bar Ends -->
   </header>
