--- a/UI/admin/forgotpassword.html
+++ b/UI/admin/forgotpassword.html
@@ -17,7 +17,7 @@
     <!-- Navigation bar Starts -->
     <nav class="navbar" id="myNav">
       <a href="login.html" class="nav-brand">Fast-Food-Fast</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+      <a id="nav-icon" class="icon">&#9776;</a>
     </nav>
     <!-- Navigation bar Ends -->
   </header>
