--- a/UI/index.html
+++ b/UI/index.html
@@ -17,7 +17,7 @@
       <a href="#" class="nav-brand">Fast-Food-Fast</a>
       <a href="all-food-items.html">View Menu</a>
       <a href="login.html">Sign in</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+      <a id="nav-icon" class="icon">&#9776;</a>
     </nav>
     <!-- Navigation bar Ends -->
   </header>
