--- a/UI/login.html
+++ b/UI/login.html
@@ -17,7 +17,7 @@
     <nav class="navbar" id="myNav">
       <a href="index.html" class="nav-brand">Fast-Food-Fast</a>
       <!--<a href="">About</a>-->
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+      <a id="nav-icon" class="icon">&#9776;</a>
     </nav>
     <!-- Navigation bar Ends -->
   </header>
