--- a/UI/admin/all-food-items.html
+++ b/UI/admin/all-food-items.html
@@ -22,9 +22,9 @@
         </div>
         <div class="">
           <h1>Are you sure ?</h1>
-          <form onsubmit="redirectTo('delete-food-successful.html'); return false;">
+          <form id="all-food-items">
             <input type="submit" class="btn red-bg-colour white-text" value="Yes" />
-            <button type="button" onclick="modalClosePopup(); return false;" class="btn btn-secondary modal-close">No</button>
+            <button type="button" id="close-modal" class="btn btn-secondary modal-close">No</button>
           </form>
           <br />
         </div>
@@ -260,6 +260,7 @@
   </footer>
   <script type="text/javascript" src="../assets/js/script.js"></script>
   <script type="text/javascript" src="../assets/js/modal.js"></script>
+  <script type="text/javascript" src="../assets/js/redirect.js"></script>
 </body>
 
 </html>
