--- a/UI/admin/edit-food-items.html
+++ b/UI/admin/edit-food-items.html
@@ -57,7 +57,7 @@
           <div class="form">
             <h2>Edit food item</h2>
             <h3>Item No: 1230</h3>
-            <form onsubmit="redirectTo('edit-food-successful.html'); return false;">
+            <form id="edit-food-form">
               <div>
                 <p class="">Name of food</p>
                 <input type="text" class="textbox" required placeholder="Enter the new food name here..." />
@@ -99,6 +99,7 @@
     </div>
   </footer>
   <script type="text/javascript" src="../assets/js/script.js"></script>
+  <script type="text/javascript" src="../assets/js/redirect.js"></script>
 </body>
 
 </html>
