--- a/UI/admin/decline-confirmation.html
+++ b/UI/admin/decline-confirmation.html
@@ -58,7 +58,7 @@
             <h2>Decline confirmation</h2>
             <p>Please state in the box below the reason for declining</p>
             <p>reason will be sent to user</p>
-            <form onsubmit="redirectTo('pending-orders.html'); return false;">
+            <form id="decline-confirm">
               <div>
                 <p class="">Reason</p>
                 <textarea></textarea>
@@ -86,6 +86,7 @@
     </div>
   </footer>
   <script type="text/javascript" src="../assets/js/script.js"></script>
+  <script type="text/javascript" src="../assets/js/redirect.js"></script>
 </body>
 
 </html>
