--- a/UI/admin/login.html
+++ b/UI/admin/login.html
@@ -28,7 +28,7 @@
         <div class="innerbox-container">
           <div class="form">
             <h2>Sign into your account</h2>
-            <form onsubmit="redirectTo('all-food-items.html'); return false;">
+            <form id="admin-login">
               <div>
                 <p class="">Email</p>
                 <input type="email" class="textbox" required placeholder="Enter email here..."/>
@@ -61,6 +61,7 @@
     </div>
   </footer>
   <script type="text/javascript" src="../assets/js/script.js"></script>
+  <script type="text/javascript" src="../assets/js/redirect.js"></script>
 </body>
 
 </html>
