--- a/UI/login.html
+++ b/UI/login.html
@@ -29,7 +29,7 @@
         <div class="innerbox-container">
           <div class="form">
             <h2>Login to your account</h2>
-            <form onsubmit="redirectTo('./users/all-food-items.html'); return false;">
+            <form id="user-login">
               <div>
                 <p class="">Email</p>
                 <input type="email" class="textbox" required placeholder="Enter email here..." />
@@ -43,7 +43,7 @@
               </p>
               <br/>
               <div class="">
-                <input type="submit" class="btn blue-bg-colour white-text" value="Login" />
+                <button type="submit" class="btn blue-bg-colour white-text">Login</button>
               </div>
               <br/>
               <div class="">
@@ -67,6 +67,7 @@
     </div>
   </footer>
   <script type="text/javascript" src="./assets/js/script.js"></script>
+  <script type="text/javascript" src="./assets/js/redirect.js"></script>
 </body>
 
 </html>
