--- a/UI/users/pending-orders.html
+++ b/UI/users/pending-orders.html
@@ -23,9 +23,9 @@
         </div>
         <div class="">
           <h1>Are you sure ?</h1>
-          <form onsubmit="redirectTo('cancel-order-successful.html'); return false;">
-            <input type="submit" class="btn red-bg-colour white-text" value="Yes" />
-            <button type="button" onclick="modalClosePopup(); return false;" class="btn btn-secondary modal-close">No</button>
+          <form id="user-pending">
+            <button type="submit" class="btn red-bg-colour white-text">Yes</button>
+            <button type="button" id="close-modal" class="btn btn-secondary modal-close">No</button>
           </form>
           <br />
         </div>
@@ -90,7 +90,7 @@
                 <a href="edit-order.html" class="white-text">Edit</a>
               </button>
               <button class="red-bg-colour white-text">
-                <a href="" onclick="modalPopup(); return false;" class="white-text">Cancel</a>
+                <a onclick="modalPopup()" class="white-text">Cancel</a>
               </button>
             </div>
           </div>
@@ -116,7 +116,7 @@
                 <a href="edit-order.html" class="white-text">Edit</a>
               </button>
               <button class="red-bg-colour white-text">
-                <a href="" onclick="modalPopup(); return false;" class="white-text">Cancel</a>
+                <a onclick="modalPopup()" class="white-text">Cancel</a>
               </button>
 
             </div>
@@ -143,7 +143,7 @@
                 <a href="edit-order.html" class="white-text">Edit</a>
               </button>
               <button class="red-bg-colour white-text">
-                <a href="" onclick="modalPopup(); return false;" class="white-text">Cancel</a>
+                <a onclick="modalPopup()" class="white-text">Cancel</a>
               </button>
             </div>
           </div>
@@ -168,7 +168,7 @@
                 <a href="edit-order.html" class="white-text">Edit</a>
               </button>
               <button class="red-bg-colour white-text">
-                <a href="" onclick="modalPopup(); return false;" class="white-text">Cancel</a>
+                <a onclick="modalPopup()" class="white-text">Cancel</a>
               </button>
             </div>
           </div>
@@ -190,6 +190,8 @@
   </footer>
   <script type="text/javascript" src="../assets/js/script.js"></script>
   <script type="text/javascript" src="../assets/js/modal.js"></script>
+  <script type="text/javascript" src="../assets/js/redirect.js"></script>
+
 </body>
 
 </html>
