Float sign in link on index page to the right
For better user experience float sign in link to the right of the nav bar

Remove unwanted lines of code

--- a/UI/forgotpassword.html
+++ b/UI/forgotpassword.html
@@ -16,7 +16,7 @@
   <header>
     <!-- Navigation bar Starts -->
     <nav class="navbar" id="myNav">
-      <a href="#" class="nav-brand">Fast-Food-Fast</a>
+      <a href="index.html" class="nav-brand">Fast-Food-Fast</a>
       <a id="nav-icon" class="icon">&#9776;</a>
     </nav>
     <!-- Navigation bar Ends -->
