--- a/UI/index.html
+++ b/UI/index.html
@@ -14,9 +14,9 @@
   <header>
     <!-- Navigation bar Starts -->
     <nav class="navbar" id="myNav">
-      <a href="#" class="nav-brand">Fast-Food-Fast</a>
+      <a href="index.html" class="nav-brand">Fast-Food-Fast</a>
       <a href="all-food-items.html">View Menu</a>
-      <a href="login.html">Sign in</a>
+      <a href="login.html" class="profile">Sign in</a>
       <a id="nav-icon" class="icon">&#9776;</a>
     </nav>
     <!-- Navigation bar Ends -->
